# web_sample

./: Cargo.toml  localhost+2-key.pem  localhost+2.pem  localhost-key.pem  localhost.pem
src/: error.rs  jwt.rs  lib.rs  main.rs
src/handler/: authenticate.rs  error.rs  jwt.rs  mod.rs  product_register.rs  product_search.rs  view_commons.rs  view_helper.rs
views/pages/error/: error.html
views/pages/layout/: layout.html
views/pages/login/: login.html
views/pages/menu/: menu.html
views/pages/register/: enter.html  finish.html
views/pages/search/: search.html
