[package]
name = "web_sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix       =   "0.13.0"
actix-web = { version = "4.2.1", features = ["openssl"] }
#actix-session = { version="0.7.1" , features = ["cookie-session"] }
actix-session = { version="0.7.1" , features = ["redis-rs-session"]}
serde       =   { version = "1.0.138", features = ["derive"] }
openssl     =   { version = "0.10.41", features = ["v110"] }
sea-orm     =   { version = "0.9.1" , features=["sqlx-postgres" , "runtime-tokio-rustls" , "macros"] , default-features = false}
tera        =   "1.16.0"
mime        =   "0.3.16"
env_logger  =   "0.9.0"
log         =   "0.4.17"
anyhow      =   "1.0.62"
thiserror   =   "1.0.32"
async-trait =   "0.1.57"
rusty-money =   { version = "0.4.1", features = ["iso", "crypto"] }
# ISO8601に準拠した日付・時間
chrono = "0.4.19"
app_commons = {git = "https://github.com/fullness-MFurukawa/app_commons" , rev="ca1eaaaa2cb85bc4774663f966a3d44f0624f573" }